gccida/c3/lex_number
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1331:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1366:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1367:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v73; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1368:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v74; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1378:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v84; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1379:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v85; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1430:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v9] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1432:14: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v7 = 2 * ( ( sch_istable[v9] & 4) == 0) + 8; 
             ^~~~~~~~~~~
             _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1462:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v18] & 4) == 0 && ( ( sch_istable[v18] & 0x100) == 0 || v7 != 16) ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1462:42: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v18] & 4) == 0 && ( ( sch_istable[v18] & 0x100) == 0 || v7 != 16) ) 
                                         ^~~~~~~~~~~
                                         _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1464:7: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v19 = hex_value[v18]; 
      ^~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1541:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v34] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1549:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[( unsigned __int8)v34] & 4) != 0 ) 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:1562:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v47] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:2023:17: error: use of undeclared identifier 'unk_6668B8'
v38 = ( char *)&unk_6668B8; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:2027:17: error: use of undeclared identifier 'unk_6668C8'
v38 = ( char *)&unk_6668C8; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:2063:20: error: expected expression
v84 = ( tree_node *)*( &global_trees + 11); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/c-lex.c:2063:9: error: use of undeclared identifier 'tree_node'
v84 = ( tree_node *)*( &global_trees + 11); 
        ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/lex_number/src/obj/c-lex.o] Error 1
